# ELSL-aws-iot-hallway-bathroom-lights

./: .gitattributes  .gitmodules  CMakeLists.txt  KConfig  Kconfig  Kconfig.projbuild  README.md  partitions.csv  sdkconfig  sdkconfig.old
.git-crypt/keys/default/0/: 9B82847BB875CE688C242F7E0E7D16D48439430B.gpg
.github/workflows/: build.yml
main/: CMakeLists.txt  idf_component.yml  insights.c  insights.h  led.c  led.h  led_handler.c  led_handler.h  led_strip.c  logging.c  logging.h  main.c  motion_sensor.c  motion_sensor.h  mqtt.c  mqtt.h  ota.c  ota.h  sensors.c  sensors.h  state_handler.c  state_handler.h  time_sync.c  time_sync.h  wifi.c  wifi.h
main/certs/: AmazonRootCA1_pem.c  amazon_root_ca1.c  chicken_coop_controller_cert.c  chicken_coop_controller_private_key.c  esp_insights_auth_key.c  home_hallway_bathroom_lights_certificate_pem.c  home_hallway_bathroom_lights_private_pem_key.c  home_hallway_bathroom_lights_public_pem_key.c
main/certs/original/: AmazonRootCA1.pem  chicken-coop-controller-public.key  chicken-coop-controller.crt  chicken-coop-controller.key  home-hallway-bathroom-lights-certificate.pem  home-hallway-bathroom-lights-private.pem.key  home-hallway-bathroom-lights-public.pem.key
main/certs/policies/: home-hallway-bathroom-lights-iot-policy.json  iot-core-policy.json
scripts/: convert_certs_to_c.sh  create_things.sh  remove_file_history_from_repo.sh  things.json
